# Task-Manager

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml  test_coverage.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/api/: urls.py
task_manager/api/users_api/: api_views.py  permissions.py  serializers.py  tests.py  urls.py
task_manager/fixtures/: test_labels.json  test_statuses.json  test_tasks.json  test_users.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  texts.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/labels/templates/: create_label.html  delete_label.html  labels.html  update_label.html
task_manager/labels/tests/: label_test_case.py  test_forms.py  test_models.py  test_views.py  testcase.py  tests.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  texts.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/statuses/templates/: create_status.html  delete_status.html  statuses.html  update_status.html
task_manager/statuses/tests/: status_test_case.py  test_forms.py  test_models.py  test_views.py  testcase.py  tests.py
task_manager/task_manager_main/: apps.py  forms.py  mixins.py  tests.py  urls.py  views.py
task_manager/task_manager_main/templates/: base.html  index.html  login.html  nav.html
task_manager/tasks/: admin.py  filter.py  filters.py  forms.py  mixins.py  models.py  tests.py  texts.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_executor.py  0003_alter_task_name.py  0004_alter_task_executor.py  0005_alter_task_executor_alter_task_name.py  0006_taskswithlabels_task_labels.py  0007_alter_task_labels.py
task_manager/tasks/templates/: create_task.html  delete_task.html  detail_task.html  tasks.html  update_task.html
task_manager/tasks/tests/: filter_tasks_test_case.py  task_test_case.py  test_forms.py  test_models.py  test_views.py  testcase.py  tests.py
task_manager/templates/: base.html  footer.html  form.html  index.html  navbar.html
task_manager/templates/labels/: label_delete.html  (+1 more)
task_manager/tests/: base_test_case.py
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  texts.py  urls.py  views.py
(+28 files in other folders)
